[project]
name = "ncloud-docs-mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "dotenv>=0.9.9",
    "httpx>=0.28.1",
    "mcp>=1.23.3",
    "pydantic>=2.12.5",
    "qdrant-client>=1.16.1",
]
